forms-flow-theme/scss/_theme.scss
//New Colors
$black: #000000;
$white: #ffffff;
$green: #57C20A;
$green-dark: #006621;

//primary shades
$primary: #253DF4;
$primary-light: #E2E1FC;

//gray shades
$gray-darkest: #303436;
$gray-dark: #4C4C4C;
$gray-medium-dark: #AFB4B6;
$gray-medium-darker: #9E9E9E;
$gray-medium: #E4E6E7;
$gray-light: #F2F2F3;
$transparent: #f2f2f300;


$success: $green-dark;
$btn-color: $black;
//no-code colors
$no-code-success: #1B9C85;
$no-code-secondary: #EA9389;
$no-code-warning: #faad14;

$theme-colors: (
  "primary": $primary,
  "success": $success,
  "black":$black,
  "white": $white,
);

$custom-colors: (
  //blue shades
  "primary": $primary,
  "primary-light": $primary-light,

  //gray shades
  "gray-darkest": $gray-darkest,
  "gray-dark": $gray-dark,
  "gray-medium-dark": $gray-medium-dark,
  "gray-medium": $gray-medium,
  "gray-light": $gray-light,

  //others
  "black": $black,
  "white": $white,
  "green": $green,
  "danger": $danger,
);

// Merge the maps
$theme-colors: map-merge($theme-colors, $custom-colors);









// VARIABLES ADDED BY MAX

//base
$base: 1rem;
$lineThin: 1px;
$lineThick: $lineThin*2;
$iconWidth: $base;

// fonts
$fontBase: $base;
$fontLineHeight: 1.2;
$fontSmallest: $fontBase*0.875;
$fontSectionHead: $fontBase*1.125;
$fontChoiceHead: $fontBase*1.25;
$fontModalTitle: $fontBase*1.5;

// borders
$borderRadiusHeightESM: $base*0.78; // 12.5px
$borderRadiusHeightSM: $base*1.094; // 17.5px
$borderRadiusHeightM: $base*1.344;  // 21.5px
$borderRadiusHeightL: $base*1.594; // 25.5px
$borderRadiusModal: $base*1.5; // 24px

// color globals
$colorDivider: $gray-medium;
$colorDividerDark: $gray-medium-dark;

// constants
$navPadding: $base;
$scrollBarWidth: $base;

// modals
$modalWidthSmall: $base*60;
$modalWidthLarge: $base*75;
$modalOutterPadding: $base;

// transitions
$animSpeed: 300ms;












:root {
  //for navbar
  --navbar-active-submenu-bg-color: #{$gray-darkest};
  --navbar-active-submenu-font-color: #{$white};
  --navbar-menu-hover-bg-color: #{$primary-light};

  --navbar-active-submenu-font-weight: var(--font-weight-lg);
  --navbar-active-submenu-font-size: var(--font-size-sm);
  --navbar-hover-submenu-bg-color: #{$primary-light};
  --navbar-hover-submenu-font-color: #{$gray-darkest};
  --navbar-hover-submenu-font-weight: var(--font-weight-xl);
  --navbar-hover-submenu-font-size: var(--font-size-xs);

  --navbar-main-menu-active-bg-color: #{$gray-medium};
  --navbar-main-menu-active-font-color: #{$gray-darkest};
  --navbar-bg-color: #{$white};
  --custom-logo-path: " ";
  --custom-title: " ";

  //for buttons
  --primary-btn-font-color: #{$white};
  --primary-btn-bg-color: #{$primary};
  --secondary-btn-font-color: #{$primary};
  --secondary-btn-bg-color: #{$primary-light};
  --default-link-color: #{$primary};
  --sm-btn-border-radius: var(--radius-md);
  --md-btn-border-radius: var(--radius-md);
  --lg-btn-border-radius: var(--radius-lg);
  --default-font-size: 1rem; 
  --default-font-color: #{$gray-dark};
  // --navbar-width: 192px;
  --navbar-width:10rem;
  --custom-logo-height: 1.5rem;

  //no-code colors
  --no-code-success: #{$no-code-success};
  --no-code-secondary: #{$no-code-secondary};
  --no-code-warning: #{$no-code-warning};

  //font-style
  --default-font-family-url:" ";
  --primary-font: var(--font-family-base);
  //font-size
  --font-size-xs: 0.875rem; // 14px
  --font-size-sm: var(--default-font-size); 
  --font-size-md: 1.25rem;
  --font-size-lg: 1.5rem;
  --font-size-xl: 2rem;
  //font-weight
  --font-weight-xs: 300;
  --font-weight-sm: 400;
  --font-weight-md: 500;
  --font-weight-lg: 600;
  --font-weight-xl: 700;
  //text-space
  --text-space-xs: 0.02rem;
  --text-space-sm: 0.04rem;
  --text-space-md: 0.08rem;
  --text-space-lg: 0.16rem;
  --text-space-xl: 0.2rem;
  //line-height
  --text-line-height: 120%;
  //spacer
  --spacer-025: 0.25rem;
  --spacer-050: 0.5rem;
  --spacer-075: 0.75rem;
  --spacer-100: 1rem;
  --spacer-125: 1.25rem;
  --spacer-150: 1.5rem;
  --spacer-175: 1.75rem;
  --spacer-200: 2rem;
  --spacer-225: 2.25rem;
  --spacer-250: 2.5rem;
  --spacer-275: 2.75rem;
  --spacer-300: 3rem;
  //shadow
  --shadow-sm: 0px 2px 2px 0px rgba(48, 52, 54, 0.04);
  --shadow-md: 0px 2px 4px 0px rgba(48, 52, 54, 0.08);
  --shadow-lg: 0px 4px 8px -2px rgba(48, 52, 54, 0.08);
  --shadow-xl: 0px 12px 16px -4px rgba(48, 52, 54, 0.08);
  --shadow-2xl: 0px 20px 24px -4px rgba(48, 52, 54, 0.08);
  --shadow-3xl: 0px 24px 48px -8px rgba(48, 52, 54, 0.016);
  --shadow-nav: 4px 0px 8px -2px rgba(48, 52, 54, 0.08);
  //radius
  --radius-sm: 1.09375rem; //17.5px 
  --radius-md: 1.34375rem; //21.5px
  --radius-lg: 1.59375rem; //25.5px
  --radius-modal: 1.5rem; //24px

$borderRadiusHeightESM: $base*0.78; // 12.5px
$borderRadiusHeightSM: $base*1.094; // 17.5px
$borderRadiusHeightM: $base*1.344;  // 21.5px
$borderRadiusHeightL: $base*1.594; // 25.5px
$borderRadiusModal: $base*1.5; // 24px
  //custom
  --client-nav: 74px;
  --header-close-btn: 4.625rem;
  --default-danger-color: #FF4242;
}
//for cutomize danger color
$danger: var(--default-danger-color);

body {
  color: var(--default-font-color) !important; 
  min-height: 100vh !important;
  font-family: var(--primary-font) !important;
  overflow: hidden;
}

.info-background {
  background-color: var(--ff-danger);
}

.custom_primary_color {
  color: $primary;
}

.bg-default {
  background-color: $primary;
  border: $primary;
  color: var(--ff-white) !important;
}

/* Custom Scrollbar Styles */
.custom-scroll {
  &::-webkit-scrollbar {
    display: block;
    width: $scrollBarWidth;
    
    background-color: transparent;
    
    opacity: 0;
    
    cursor: pointer;
  }

  &:hover {
    &::-webkit-scrollbar {
      opacity: 1;
    }

    &::-webkit-scrollbar-thumb {
      width: calc($scrollBarWidth / 2);
      min-height: 15.625rem;
      background-color: var(--gray-medium-dark);
      background-clip: padding-box;
      border-radius: 5rem; // should be just big enough to round corners off completely
      border: var(--spacer-025) solid transparent;
      opacity: 1;

      cursor: pointer;
    }
  }

  &::-webkit-scrollbar-thumb:hover {
    // Remove border-color highlight on hover by unsetting border
    border: none;
    box-shadow: inset 0 0 0 $lineThin $primary;
  }
}

